--- a/web/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/web/startbootstrap-shop-homepage-gh-pages/index.html
@@ -794,8 +794,9 @@
             <button type="button" class="btn-close" onclick="closePopup()"></button>
           </div>
           <div class="modal-body">
-            <p>첫 구매 3개월 무료 구독!</p>
-            <p>화끈한 적립금과 알뜰살뜰한 보난자 쿠폰까지!</p>
+            <p>첫 구매 20% 쿠폰 제공</p>
+            <p>무료 배송, 당일/새벽 배송 제공</p>
+            <p>관심 카테고리 상품 구매시 추가 적립금 2%</p>
           </div>
           <div class="modal-footer">
             <button class="btn btn-success" onclick="closePopup()">확인</button>
